--- a/aoc.cabal
+++ b/aoc.cabal
@@ -242,3 +242,35 @@ executable a7p2
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints
+
+executable a8p1
+  hs-source-dirs:      src
+  main-is:             a8p1.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5,
+                       containers >= 0.6 && < 0.7
+  ghc-options:         -Wall
+                       -Wcompat
+                       -Widentities
+                       -Wincomplete-record-updates
+                       -Wincomplete-uni-patterns
+                       -Wmissing-export-lists
+                       -Wmissing-home-modules
+                       -Wpartial-fields
+                       -Wredundant-constraints
+
+executable a8p2
+  hs-source-dirs:      src
+  main-is:             a8p2.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5,
+                       containers >= 0.6 && < 0.7
+  ghc-options:         -Wall
+                       -Wcompat
+                       -Widentities
+                       -Wincomplete-record-updates
+                       -Wincomplete-uni-patterns
+                       -Wmissing-export-lists
+                       -Wmissing-home-modules
+                       -Wpartial-fields
+                       -Wredundant-constraints
