--- a/aoc.cabal
+++ b/aoc.cabal
@@ -494,3 +494,35 @@ executable a15p2
                        -Wpartial-fields
                        -Wredundant-constraints
 
+executable a16p1
+  hs-source-dirs:      src
+  main-is:             a16p1.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+  ghc-options:         -Wall
+                       -Wcompat
+                       -Widentities
+                       -Wincomplete-record-updates
+                       -Wincomplete-uni-patterns
+                       -Wmissing-export-lists
+                       -Wmissing-home-modules
+                       -Wpartial-fields
+                       -Wredundant-constraints
+
+executable a16p2
+  hs-source-dirs:      src
+  main-is:             a16p2.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5,
+                       containers >= 0.4.0.0
+  ghc-options:         -Wall
+                       -Wcompat
+                       -Widentities
+                       -Wincomplete-record-updates
+                       -Wincomplete-uni-patterns
+                       -Wmissing-export-lists
+                       -Wmissing-home-modules
+                       -Wpartial-fields
+                       -Wredundant-constraints
+
+
